--- a/src/main/resources/templates/recipe/ingredient/list.html
+++ b/src/main/resources/templates/recipe/ingredient/list.html
@@ -12,12 +12,19 @@
 
                 <div class="panel-heading">
                     <div class="row">
-                        <div class="col-md-11 ">
+                        <div class="col-md-3">
                             <h1 class="panel-title">Ingredients</h1>
                         </div>
-                        <div class="col-md-1">
-                            <a class="btn btn-default" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/new'}" role="button">New</a>
+
+                        <div class="row">
+                            <div class="col-md-2">
+                                <a class="btn btn-default" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/show'}" role="button">Back to recipe</a>
+                            </div>
+                            <div class="col-md-2">
+                                <a class="btn btn-default" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/new'}" role="button">New</a>
+                            </div>
                         </div>
+
                     </div>
 
                 </div>
@@ -53,9 +60,9 @@
                                 <td th:text="${ingredient.amount} + ' ' + ${ingredient.uom.getDescription()} + ' ' + ${ingredient.description}">Tasty Goodnees 3</td>
                                 <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/show'}">View</a></td>
                                 <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/update'}">Update</a></td>
-<!--                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/delete'}">Delete</a></td>-->
-                                <td><a th:include="fragments/deletePopup::deletePopup(title='Delete Ingredient',
-                                href='/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/delete')">Delete</a></td>
+                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/delete'}">Delete</a></td>
+                                <!--<td><a th:include="fragments/deletePopup::deletePopup(title='Delete Ingredient',
+                                href='/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/delete')">Delete</a></td>-->
                             </tr>
                         </table>
                     </div>
