--- a/src/main/resources/templates/recipe/ingredient/show.html
+++ b/src/main/resources/templates/recipe/ingredient/show.html
@@ -11,6 +11,12 @@
 
                 <div class="panel-heading">
                     <h1 class="panel-title">Ingredient</h1>
+                    <div class="row">
+                        <div class="col-md-2">
+                            <a class="btn btn-default" href="#"
+                               th:href="@{'/recipe/'+ ${ingredient.recipeId} +'/ingredients'}" role="button">Back to Recipe Ingredients</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="panel-body">
 
