--- a/src/main/resources/templates/recipe/list.html
+++ b/src/main/resources/templates/recipe/list.html
@@ -11,11 +11,18 @@
             <div class="panel panel-primary">
 
                 <div class="panel-heading">
-                    <h1 class="panel-title">My Recipes!</h1>
+                    <div class="row">
+                        <div class="col-md-11 ">
+                            <h1 class="panel-title">My Recipies!</h1>
+                        </div>
+                        <div class="col-md-1">
+                            <a class="btn btn-default" href="#" th:href="@{'/recipe/new'}" role="button">New</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="panel-body">
                     <div class="table-responsive" th:if="${not #lists.isEmpty(recipes)}">
-                        <table class="table table-hover ">
+                        <table class="table table-hover">
                             <thead class="thead-inverse">
                             <tr>
                                 <th>ID</th>
