--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<<head th:include="head::bootstrap (title ='Recipe Form')">
+<head th:include="head::bootstrap (title ='Recipe Form')">
 </head>
 <body>
 <!--/*@thymesVar id="recipe" type="guru.springframework.domain.Recipe"*/-->
@@ -17,14 +17,16 @@
                 <div class="pannel-group">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <h1 class="panel-title">Edit Recipe Information</h1>
+                            <h1 class="panel-title"
+                                th:text="${recipe.id} ? 'Edit Recipe Information' : 'Create New Recipe'"></h1>
                         </div>
                         <div class="panel-body">
                             <div class="row">
-                                <div class="col-md-3 form-group" th:class="${#fields.hasErrors('description')}
-                                ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
+                                <div class="col-md-3 form-group"
+                                     th:class="${#fields.hasErrors('description')} ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
                                     <label>Recipe Description:</label>
-                                    <input type="text" class="form-control" th:field="*{description}" th:errorclass="has-error"/>
+                                    <input type="text" class="form-control" th:field="*{description}"
+                                           th:errorclass="has-error"/>
                                     <span class="help-block" th:if="${#fields.hasErrors('description')}">
                                         <ul>
                                             <li th:each="err : ${#fields.errors('description')}" th:text="${err}"/>
@@ -52,20 +54,22 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-3 form-group" th:class="${#fields.hasErrors('prepTime')}
-                                ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
+                                <div class="col-md-3 form-group"
+                                     th:class="${#fields.hasErrors('prepTime')} ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
                                     <label>Prep Time:</label>
-                                    <input type="text" class="form-control" th:field="*{prepTime}" th:errorclass="has-error"/>
+                                    <input type="text" class="form-control" th:field="*{prepTime}"
+                                           th:errorclass="has-error"/>
                                     <span class="help-block" th:if="${#fields.hasErrors('prepTime')}">
                                         <ul>
                                             <li th:each="err : ${#fields.errors('prepTime')}" th:text="${err}"/>
                                         </ul>
                                     </span>
                                 </div>
-                                <div class="col-md-3 form-group" th:class="${#fields.hasErrors('cookTime')}
-                                ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
+                                <div class="col-md-3 form-group"
+                                     th:class="${#fields.hasErrors('cookTime')} ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
                                     <label>Cooktime:</label>
-                                    <input type="text" class="form-control" th:field="*{cookTime}" th:errorclass="has-error"/>
+                                    <input type="text" class="form-control" th:field="*{cookTime}"
+                                           th:errorclass="has-error"/>
                                     <span class="help-block" th:if="${#fields.hasErrors('cookTime')}">
                                         <ul>
                                             <li th:each="err : ${#fields.errors('cookTime')}" th:text="${err}"/>
@@ -89,10 +93,11 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-3 form-group" th:class="${#fields.hasErrors('servings')}
-                                ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
+                                <div class="col-md-3 form-group"
+                                     th:class="${#fields.hasErrors('servings')} ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
                                     <label>Servings:</label>
-                                    <input type="text" class="form-control" th:field="*{servings}" th:errorclass="has-error"/>
+                                    <input type="text" class="form-control" th:field="*{servings}"
+                                           th:errorclass="has-error"/>
                                     <span class="help-block" th:if="${#fields.hasErrors('servings')}">
                                         <ul>
                                             <li th:each="err : ${#fields.errors('servings')}" th:text="${err}"/>
@@ -103,10 +108,11 @@
                                     <label>Source:</label>
                                     <input type="text" class="form-control" th:field="*{source}"/>
                                 </div>
-                                <div class="col-md-3 form-group" th:class="${#fields.hasErrors('url')}
-                                ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
+                                <div class="col-md-3 form-group"
+                                     th:class="${#fields.hasErrors('url')} ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
                                     <label>URL:</label>
-                                    <input type="text" class="form-control" th:field="*{url}" th:errorclass="has-error"/>
+                                    <input type="text" class="form-control" th:field="*{url}"
+                                           th:errorclass="has-error"/>
                                     <span class="help-block" th:if="${#fields.hasErrors('url')}">
                                         <ul>
                                             <li th:each="err : ${#fields.errors('url')}" th:text="${err}"/>
@@ -116,7 +122,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel panel-primary">
+                    <div class="panel panel-primary" th:if="${recipe.id}">
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-md-11 ">
@@ -151,8 +157,15 @@
                         </div>
                         <div class="panel-body">
                             <div class="row">
-                                <div class="col-md-12 form-group">
-                                    <textarea class="form-control" rows="3" th:field="*{directions}"></textarea></div>
+                                <div class="col-md-12 form-group"
+                                     th:class="${#fields.hasErrors('directions')} ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
+                                    <textarea class="form-control" rows="3" th:field="*{directions}"></textarea>
+                                    <span class="help-block" th:if="${#fields.hasErrors('directions')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('directions')}" th:text="${err}"/>
+                                        </ul>
+                                    </span>
+                                </div>
                             </div>
                         </div>
                     </div>
