--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -15,10 +15,17 @@
                                 <h1 class="panel-title" th:text="${recipe.description}">Recipe Description Here!</h1>
                             </div>
 
-                            <div class="col-md-1">
-                                <a class="btn btn-default" href="#"
-                                   th:href="@{'/recipe/' + ${recipe.id} + '/image'}" role="button">Change Image</a>
+                            <div class="row">
+                                <div class="col-md-2">
+                                    <a class="btn btn-default" href="#"
+                                       th:href="@{'/index/'}" role="button">Back to Recipes</a>
+                                </div>
+                                <div class="col-md-2">
+                                    <a class="btn btn-default" href="#"
+                                       th:href="@{'/recipe/' + ${recipe.id} + '/image'}" role="button">Change Image</a>
+                                </div>
                             </div>
+
                         </div>
                     </div>
                     <div class="panel-body">
